Исправлен баг по переходу с рекламного банера. Исправлены переходы между полями форм

--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -111,6 +111,8 @@
                     android:drawableLeft="@drawable/user"
                     android:textSize="22dp"
                     android:padding="3dp"
+                    android:singleLine="true"
+                    android:nextFocusDown="@+id/btnChangeName"
                     android:imeOptions="actionDone" />
 
                 <Button
@@ -185,6 +187,8 @@
                     android:drawableLeft="@drawable/gn"
                     android:textSize="22dp"
                     android:padding="3dp"
+                    android:singleLine="true"
+                    android:nextFocusDown="@+id/btnReg"
                     android:imeOptions="actionDone" />
 
                 <Button
