--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -100,6 +100,8 @@
                 android:drawableLeft="@drawable/gn"
                 android:textSize="22dp"
                 android:padding="3dp"
+                android:singleLine="true"
+                android:nextFocusDown="@+id/btnReg"
                 android:imeOptions="actionDone" />
 
             <Button
